packages/isar_generator/test/errors/class/private.dart
// must be public

import 'package:isar/isar.dart';

@Collection()
// ignore: unused_element
class _Model {
  Id? id;
}
